src/test/ui/parser/lex-bare-cr-string-literal-doc-comment.stderr
error: bare CR not allowed in doc-comment
  --> $DIR/lex-bare-cr-string-literal-doc-comment.rs:5:32
   |
LL | /// doc comment with bare CR: ''
   |                                ^

error: bare CR not allowed in block doc-comment
  --> $DIR/lex-bare-cr-string-literal-doc-comment.rs:9:38
   |
LL | /** block doc comment with bare CR: '' */
   |                                      ^

error: bare CR not allowed in doc-comment
  --> $DIR/lex-bare-cr-string-literal-doc-comment.rs:14:36
   |
LL |     //! doc comment with bare CR: ''
   |                                    ^

error: bare CR not allowed in block doc-comment
  --> $DIR/lex-bare-cr-string-literal-doc-comment.rs:17:42
   |
LL |     /*! block doc comment with bare CR: '' */
   |                                          ^

error: bare CR not allowed in string, use \r instead
  --> $DIR/lex-bare-cr-string-literal-doc-comment.rs:21:18
   |
LL |     let _s = "foobar";
   |                  ^

error: bare CR not allowed in raw string
  --> $DIR/lex-bare-cr-string-literal-doc-comment.rs:24:19
   |
LL |     let _s = r"barfoo";
   |                   ^

error: unknown character escape: \r
  --> $DIR/lex-bare-cr-string-literal-doc-comment.rs:27:19
   |
LL |     let _s = "foo\bar";
   |                   ^ unknown character escape
   |
   = help: this is an isolated carriage return; consider checking your editor and version control settings

error: aborting due to 7 previous errors

